
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================
Librairies:
- Mise à jour de PHPMailer (https://github.com/PHPMailer/PHPMailer) en version 5.2.13

Discipline:
- Possibilité de signaler des saisies d'incidents (aux utilisateurs suivant telle ou telle classe) par mod_alerte et non plus seulement par mail.
- Affichage de la liste des sanctions depuis la saisie/modif d'incident.
- Envoi de mails lors de la saisie de sanction et indication de sanction effectuée ou non.
- Amélioration du tri des natures d'incident proposées.
- Possibilité pour un utilisateur de supprimer un incident qu'il a déclaré si l'incident n'est rattaché à aucune mesure ni sanction.
- Pointage de menus incidents: Possibilité de définir des seuils pour envoi de mail, message sur les pointages de menus incidents.
- Possibilité de déléguer à un professeur le pointage du statut effectué ou non d'une sanction (cas d'une sanction effectuée dans la salle d'un professeur).
- Possibilité pour un enseignant de limiter aux élèves de ses groupes l'envoi de courriel lors des déclarations d'incidents

Absences2:
- Ajout de liens de création d'incident de puis mod_abs2 Saisir groupe.
- Accès à la liste des saisies de la veille pour tel élève depuis la colonne Veille dans Absences du jour.

Cahiers de textes:
- Possibilité d'ajouter un témoin 'contrôle' dans les travaux à faire du CDT.
- Page résumé/simplifiée élève : Précision des dates de travaux futurs en title.

Carnet de notes:
- Affichage du nombre de notes inférieures/supérieures à 10.
- Accès en statut autre à la Visualisation des moyennes de carnets de notes (ajout d'un droit).

Bulletins:
- Accès en statut autre au Tableau récapitulatif des moyennes d'une classe dans le cas où l'utilisateur a accès aux bulletins simplifiés ou non.

Panneau d'affichage:
- Possibilité de déposer un message pour les professeurs principaux.

Publipostage OOo: